# kaggle-cryoet

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: copick.json
kaggle_cryoet/: config.py  loader.py  main.py
notebooks/: 01_Hello.ipynb
