[tool.poetry]
name = "kaggle_cryoet"
version = "0.1.0"
description = ""
authors = ["Jeerawat Chuachan <jeerawatchu@gmail.com>"]
readme = "README.md"
packages = [{include = "kaggle_cryoet"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
